--- a/premium/erotic-blueprint_devoted_darling.html
+++ b/premium/erotic-blueprint_devoted_darling.html
@@ -1,1 +1,252 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Devoted Darling – Erotic Blueprint</title>
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
+  <style>
+    body {
+      background-color: #064D95;
+      font-family: 'Montserrat', sans-serif;
+      color: white;
+      margin: 0;
+      padding: 0 20px;
+      border: 12px solid #e1bf78;
+      box-sizing: border-box;
+    }
+    .logo {
+      max-width: 120px;
+      margin: 40px auto 20px;
+      display: block;
+    }
+    h1 {
+      text-align: center;
+      font-style: italic;
+      text-shadow: 0 0 5px #57b9ff, 0 0 10px #57b9ff;
+      margin-bottom: 20px;
+    }
+    .slogan {
+      text-align: center;
+      font-style: italic;
+      color: #d8ebff;
+      margin-top: 10px;
+    }
+    .quote {
+      text-align: center;
+      font-style: italic;
+      color: #a0d2ff;
+      margin-bottom: 40px;
+    }
+    .image-container {
+      border: 4px solid #e1bf78;
+      border-radius: 12px;
+      overflow: hidden;
+      display: flex;
+      justify-content: center;
+      align-items: stretch;
+      width: 100%;
+      max-width: 700px;
+      margin: 0 auto 30px auto;
+    }
+    .image-half {
+      flex: 1;
+    }
+    .image-half img {
+      display: block;
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
+      pointer-events: none;
+      user-select: none;
+    }
+    .divider {
+      width: 4px;
+      background-color: #e1bf78;
+    }
+    h2 {
+      font-style: italic;
+      color: #e1bf78;
+      margin-top: 40px;
+    }
+    ul {
+      margin-left: 20px;
+    }
+    sub {
+      display: block;
+      margin-left: 20px;
+      opacity: 0.9;
+    }
+  </style>
+</head>
+<body>
+  <img src="/golden-le-libido-logo.png" alt="Le Libido Logo" class="logo">
+  <h1>Devoted Darling</h1>
+  <p class="slogan">Nothing is as kinky as loyalty</p>
+  <p class="quote">“Love is composed of a single soul inhabiting two bodies.” – Aristotle</p>
 
+  <div class="image-container">
+    <div class="image-half">
+      <img src="/images/devoted_darling_female.jpg" alt="Female Devoted Darling">
+    </div>
+    <div class="divider"></div>
+    <div class="image-half">
+      <img src="/images/devoted_darling_male.jpg" alt="Male Devoted Darling">
+    </div>
+  </div>
+
+  <h2>Description</h2>
+  <p>You don’t perform devotion, you embody it. For you, intimacy is about trust, not control. Once someone proves they’re worthy, you don’t just give affection, you give access. Your submission isn’t passive; it’s sacred. Psychologists call this “secure surrender,” where emotional safety becomes the ultimate turn-on.</p>
+
+  <h2>Power Dynamic Arc</h2>
+  <p><strong>Relationship Trajectory:</strong> Devoted Darlings are consistent submissives. Their desire is built around emotional safety, romantic trust, and the feeling of being claimed by someone worthy. They do not seek control, they seek deep belonging.</p>
+  <p><strong>Polarity Shift Graph (Stock Chart Style):</strong></p>
+  <ul>
+    <li>Submissive stays submissive with attuned dominant → 📈 Steady rise</li>
+    <li><sub>Intimacy, loyalty, and passion deepen over time</sub></li>
+    <li>Partner becomes emotionally absent → 📉 Slow decline</li>
+    <li><sub>Darling stays loyal, but becomes anxious and undernourished</sub></li>
+    <li>Darling forced into leadership role → 🚨 Critical drop</li>
+    <li><sub>They may adjust and take the lead, but the dynamic becomes emotionally unsustainable</sub></li>
+    <li>Partner tests their limits too harshly → ⚠️ Polarity rupture</li>
+    <li><sub>Devoted Darling loses trust and emotional openness</sub></li>
+  </ul>
+    <h2>Ideal Dynamic:</h2>
+  <p>They thrive in relationships where the dominant leads with warmth, steadiness, and earned authority. Devoted Darlings bloom under consistent, loving direction, not chaos, volatility, or apathy. Their loyalty intensifies when they are gently guided.</p>
+
+  <h2>Origins of Desire</h2>
+  <p>Devoted Darlings are aroused by earned closeness, emotional protection, and being cherished through gentle control. Their turn-ons stem from connection, consistency, and the feeling of being seen.</p>
+
+  <p><strong>Theoretical Explanations:</strong></p>
+  <ul>
+    <li><strong>Self-Esteem Theory:</strong> They desire to be treated as precious, because they secretly fear they’re not. When someone makes them feel treasured, it awakens their deepest longing to serve, to surrender, and to trust.</li>
+    <li><strong>Imprintation Theory:</strong> Early memories of being gently corrected, protected, or emotionally comforted may have linked obedience to affection, forming the foundation of their sexual submission.</li>
+    <li><strong>Mimetic Desire Theory:</strong> They often internalized romantic ideals from media, family, or early role models, shaping their sexuality around devotion and emotional bonding.</li>
+    <li><strong>Exposure Therapy Theory:</strong> For some, devotion may have become a coping mechanism, transforming anxious attachment into pleasurable surrender, as a way to reclaim power through trust.</li>
+    <li><strong>Blank Slate Theory:</strong> Many were taught that love must be earned or proved. Their sexuality reflects that narrative, drawing arousal from being “good enough” to keep someone’s love.</li>
+  </ul>
+
+  <h2>Turn-On Vocabulary</h2>
+  <p>These phrases melt them instantly:</p>
+  <ul>
+    <li>“You’re good at this”</li>
+    <li>“I’m so proud of you”</li>
+    <li>“I love how much you care”</li>
+    <li>“You belong to me”</li>
+    <li>“No one else gets you like I do”</li>
+    <li>“I’ve got you. You’re safe now”</li>
+    <li>“Let me take care of you”</li>
+    <li>“You’re mine”</li>
+    <li>“Say thank you”</li>
+    <li>“Be good for me”</li>
+  </ul>
+
+  <h2>Conflict Pattern</h2>
+  <p><strong>Tendencies During Conflict:</strong></p>
+  <ul>
+    <li>Internalizes blame, even when it isn’t their fault</li>
+    <li>Becomes overly accommodating to avoid rejection</li>
+    <li>Cries easily or shuts down when they feel they’ve disappointed someone</li>
+    <li>May offer physical affection to repair emotional distance without addressing the issue</li>
+  </ul>
+
+  <p><strong>Triggers:</strong></p>
+  <ul>
+    <li>Being criticized or dismissed without care</li>
+    <li>Feeling abandoned, ignored, or unworthy</li>
+    <li>Being told they are too much, too needy, or too soft</li>
+    <li>Sudden coldness or withdrawal from a partner they trust</li>
+  </ul>
+
+  <p><strong>Resolution Style:</strong></p>
+  <ul>
+    <li>Needs reassurance that they are still wanted</li>
+    <li>Responds best to tenderness, patience, and slow reconnection</li>
+    <li>Conflict is resolved through consistency, emotional safety, and reminders of worth</li>
+    <li>Breakthroughs happen when their vulnerability is honored, not exploited</li>
+  </ul>
+
+  <p><strong>Growth Edge:</strong></p>
+  <ul>
+    <li>Learning to express hurt without self-blame</li>
+    <li>Setting emotional boundaries while remaining devoted</li>
+    <li>Trusting that their needs matter too</li>
+  </ul>
+
+  <h2>Erotic Edge & Drop</h2>
+  <p><strong>Erotic Edge:</strong> Devoted Darlings offer reverent submission. Their partners are drawn to how present, obedient, and emotionally available they are. Their superpower is their sacred devotion—they treat erotic submission like an act of worship, which creates a level of intimacy many only dream of.</p>
+  <p><strong>Erotic Drop (Dealbreaker):</strong> Feeling taken for granted, mocked, or emotionally abandoned. If their trust is broken or their vulnerability is weaponized, they shut down completely. They only surrender to those who cherish what they offer.</p>
+
+    <h2>Erotic Short Story</h2>
+  <p>You try to tell yourself it’s just a crush.</p>
+  <p>Just a silly daydream, a passing attraction, a fantasy you’ve spun too tightly around someone who doesn’t even know you like that.</p>
+  <p>You repeat it like a mantra. Logical. Dismissive. Responsible.</p>
+  <p>But it never sticks. Not when your body reacts before your mind can catch up. Not when a single glance from them ignites something deep inside you. Not when they speak and the sound settles like a promise you’ve been waiting to hear all your life.</p>
+  <p>It’s not about how hot they look. Or how grounded they seem when they walk into a room. It’s not even about how everyone turns to face them. It’s the way they make you feel seen without even trying. Like the parts of you you’ve tried to dim just so someone might love you are the very parts they’d instinctively pull into the light.</p>
+  <p>You try to bury the fantasy. You keep yourself in check.</p>
+  <p>Until tonight.</p>
+  <p>Until the party.</p>
+  <p>You didn’t even want to go. But you put on your favorite outfit anyway. Not to stand out. Just to feel a little more like yourself.</p>
+  <p>And when they see you, really see you, the air shifts.</p>
+  <p>They’re mid-conversation when their eyes catch yours across the room. It’s subtle. A glance. Then a second, longer look. You feel the weight of it settle into your skin.</p>
+  <p>They excuse themselves without hesitation.</p>
+  <p>They walk toward you, calm, purposeful, as if nothing in the room matters more than where they’re going. Than who they’re going to.</p>
+  <p>You.</p>
+  <p>“Hey,” they say. Just that. But the way they say it, controlled, measured, like they already know your answer, makes your breath catch.</p>
+  <p>You swallow. Nod. “Hi.”</p>
+  <p>They don’t make small talk. They don’t ask how you’ve been. They just tilt their head slightly, like they’ve been thinking about this moment all night.</p>
+  <p>“I’ve got a quiet place we can go,” they murmur. “Come with me.”</p>
+  <p>And you do.</p>
+  <p>Not because they make you.</p>
+  <p>Because something inside you already wants to follow.</p>
+  <p>They don’t rush. They take their time leading you up the stairs, their hand at the small of your back. It’s light. Barely there. But it anchors you. Like a thread between your spine and theirs, pulling you forward.</p>
+  <p>When you step into the room, they close the door behind you, not with force, but certainty. Then they turn to face you, and wait.</p>
+  <p>You stand there for a moment, heart racing, unsure what to do next.</p>
+  <p>They step closer.</p>
+  <p>“You came,” they say.</p>
+  <p>You nod again. Your voice doesn’t work right now. Everything inside you is too loud. You want to do something. Say something. Offer yourself forward. But you're frozen, stunned by the anticipation of pleasure.</p>
+  <p>So they do.</p>
+  <p>Their hand lifts slowly to your jaw. Fingers brushing the edge, never pressing, never claiming. Just there.</p>
+  <p>Their eyes don’t leave yours. They’re watching your breath. Your stillness. Your restraint.</p>
+  <p>“You don’t have to hold yourself together right now,” they say.</p>
+  <p>You close your eyes.</p>
+  <p>And exhale.</p>
+  <p>That’s when your body starts to soften. Your shoulders drop. Your throat loosens. The guard you didn’t even realize you’d been wearing starts to slip.</p>
+  <p>They guide you backward until the backs of your knees touch the bed. You sit without question.</p>
+  <p>They don’t push. They don’t demand. They just start undressing you one slow layer at a time, eyes never leaving yours.</p>
+  <p>You let them.</p>
+  <p>Not because they’ve taken control.</p>
+  <p>But because they’ve earned it.</p>
+  <p>And that makes all the difference.</p>
+  <p>Their touch is patient. Reverent. They treat every inch of you like it matters. Like they’re memorizing something precious. By the time you’re bare, you feel more worshipped than exposed.</p>
+  <p>Their hands slide down your arms, your sides, your thighs. They move like they’ve got all the time in the world.</p>
+  <p>You lie back for them, legs parting instinctively, not out of shame or obedience, but because this is what you want. To be their sole focus. To be touched. To be taken care of without having to ask.</p>
+  <p>They climb over you slowly, one hand braced beside your head, the other dragging across your chest. You feel the heat of their skin, the weight of their gaze. Your breath goes shallow.</p>
+  <p>When their mouth finds your neck, you tilt your chin without thinking, offering more.</p>
+  <p>You crave their mouth everywhere.</p>
+  <p>You ache for their attention.</p>
+  <p>They kiss down your collarbone, across your chest, pausing when your breath hitches. Then lower.</p>
+  <p>You’re already shaking.</p>
+  <p>Already arching into them.</p>
+  <p>Already whispering their name.</p>
+  <p>They take their time exploring you, touching you the way you always wanted to be touched, with care, with intention, with the kind of attention that makes you feel like the only thing that matters right now is your pleasure.</p>
+  <p>You moan. You grind. You curl under their hands.</p>
+  <p>And when your climax hits, it’s not just release.</p>
+  <p>It’s relief.</p>
+  <p>You don’t cry out. Just a long, trembling gasp. Like something long buried just rushed to the surface.</p>
+  <p>They stay with you. Close. Steady. Their breath warming your cheek. Their hand stroking your hip until your body settles.</p>
+  <p>“I’ve got you,” they murmur.</p>
+  <p>And you believe them. And your body melts.</p>
+  <p>Later, when you’re tucked into their chest and the world has gone soft around the edges, they kiss the top of your head.</p>
+  <p>“You don’t have to chase fairy tales,” they whisper.</p>
+  <p>You look up, hazy.</p>
+  <p>“Why not?”</p>
+  <p>Their hand presses against the center of your back. Gentle. Assured.</p>
+  <p>“Because you’ve already found what you were looking for.”</p>
+  <p>You smile, glowing.</p>
+  <p>For the first time, it doesn’t feel like fantasy.</p>
+  <p>It feels real.</p>
+
+</div>
+</body>
+</html>
