--- a/premium/erotic-blueprint_devoted_darling.html
+++ b/premium/erotic-blueprint_devoted_darling.html
@@ -100,7 +100,7 @@
 
   <h2>Power Dynamic Arc</h2>
   <p><strong>Relationship Trajectory:</strong> Devoted Darlings are consistent submissives. Their desire is built around emotional safety, romantic trust, and the feeling of being claimed by someone worthy. They do not seek control, they seek deep belonging.</p>
-  <p><strong>Polarity Shift Graph (Stock Chart Style):</strong></p>
+  <p><strong>Polarity Shift Graph:</strong></p>
   <ul>
     <li>Submissive stays submissive with attuned dominant → 📈 Steady rise</li>
     <li><sub>Intimacy, loyalty, and passion deepen over time</sub></li>
