--- a/premium/erotic-blueprint_devoted_darling.html
+++ b/premium/erotic-blueprint_devoted_darling.html
@@ -72,11 +72,13 @@
     ul {
       margin-left: 20px;
     }
-    sub {
-      display: block;
-      margin-left: 20px;
-      opacity: 0.9;
-    }
+     .sub {
+  margin-left: 1.4rem;
+  font-style: italic;
+  color: #c7c7c7;
+  list-style: none;
+  padding-left: 1rem;
+}
   </style>
 </head>
 <body>
