--- a/premium/erotic-blueprint_mood_multiplier.html
+++ b/premium/erotic-blueprint_mood_multiplier.html
@@ -3,68 +3,60 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Mood Multiplier – Erotic Blueprint</title>
-  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
+  <title>Mood Multiplier | Erotic Blueprint</title>
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
   <style>
     body {
-      margin: 0;
+      background-color: #061E34;
       font-family: 'Montserrat', sans-serif;
-      background-color: #064D95;
-      color: white;
-      padding: 0 1rem;
+      color: #ffffff;
+      padding: 0;
+      margin: 0;
     }
-    .container {
-      max-width: 800px;
-      margin: 0 auto;
-      border: 5px solid #e1bf78;
-      padding: 2rem;
-    }
+
     .logo {
       display: block;
-      margin: 30px auto 20px;
       max-width: 120px;
+      margin: 30px auto 10px;
     }
+
+    .border-wrapper {
+      border: 5px solid gold;
+      border-radius: 15px;
+      padding: 20px;
+      margin: 40px auto;
+      max-width: 900px;
+      background-color: #061E34;
+    }
+
     h1 {
       text-align: center;
-      font-size: 2.5rem;
-      color: white;
+      font-size: 28px;
+      margin-bottom: 10px;
+      color: gold;
       text-shadow: 0 0 5px #57b9ff, 0 0 10px #57b9ff;
-      font-style: italic;
-      font-weight: bold;
     }
+
     h2 {
-      color: #e1bf78;
-      font-style: italic;
-      font-size: 1.5rem;
-      margin-top: 2rem;
+      color: gold;
+      margin-top: 30px;
+      margin-bottom: 10px;
     }
-    .image-container {
-      display: flex;
-      justify-content: center;
-      gap: 10px;
-      margin: 2rem 0;
+
+    p {
+      margin-bottom: 20px;
+      line-height: 1.6;
     }
-    .image-half {
-      flex: 1;
-      border: 3px solid #e1bf78;
-      max-width: 48%;
-    }
-    .image-half img {
-      width: 100%;
-      height: auto;
-      object-fit: cover;
-      display: block;
-    }
-    .divider {
-      width: 3px;
-      background-color: #e1bf78;
-    }
+
     ul {
-      padding-left: 1.5rem;
+      margin-left: 1.4rem;
+      margin-bottom: 20px;
     }
+
     li {
-      margin-bottom: 0.5rem;
+      margin-bottom: 8px;
     }
+
     .sub {
       margin-left: 1.4rem;
       font-style: italic;
@@ -72,28 +64,59 @@
       list-style: none;
       padding-left: 1rem;
     }
+
+    .image-container {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      margin: 30px 0;
+      max-width: 700px;
+      margin-left: auto;
+      margin-right: auto;
+    }
+
+    .image-half {
+      width: 50%;
+    }
+
+    .image-half img {
+      width: 100%;
+      height: auto;
+      object-fit: cover;
+      border: 4px solid gold;
+    }
+
+    .divider {
+      width: 2px;
+      background-color: gold;
+      height: auto;
+    }
   </style>
 </head>
 <body>
-  <div class="container">
-    <img src="golden-le-libido-logo.png" alt="Le Libido Logo" class="logo" />
+
+  <img src="golden-le-libido-logo.png" alt="Le Libido Logo" class="logo">
+
+  <div class="border-wrapper">
     <h1>Mood Multiplier</h1>
-    <p style="text-align:center; font-style:italic; color:white; margin-top: 0.5rem;">
-      “I don’t adapt to people. I evolve with them.” – Anonymous
-    </p>
+    <p><em>Slogan: You match their vibe and raise it.</em></p>
+    <p><em>“I don’t adapt to people. I evolve with them.” – Anonymous</em></p>
+
     <div class="image-container">
-      <div class="image-half"><img src="mood_multiplier_male.jpg" alt="Male Mood Multiplier"></div>
+      <div class="image-half">
+        <img src="images/mood_multiplier_female.jpg" alt="Mood Multiplier Female">
+      </div>
       <div class="divider"></div>
-      <div class="image-half"><img src="mood_multiplier_female.jpg" alt="Female Mood Multiplier"></div>
+      <div class="image-half">
+        <img src="images/mood_multiplier_male.jpg" alt="Mood Multiplier Male">
+      </div>
     </div>
+
     <h2>Description</h2>
     <p>You don’t lead or follow, you co-create. Your sexual style is responsive, intuitive, and emotionally intelligent. Like a mirror that amplifies light, you reflect and enhance what others bring. This is a classic example of responsive desire, you don’t act until you feel something real. And when you do, you bring it hard.</p>
 
     <h2>Power Dynamic Arc</h2>
-    <p><strong>Relationship Trajectory:</strong><br>
-    Mood Multipliers are responsive switches. Their power dynamic is influenced by mood, emotional context, and partner energy. They can thrive in both dominant and submissive modes, but their polarity must feel emotionally earned and authentic in the moment.</p>
-
-    <p><strong>Polarity Shift Graph:</strong></p>
+    <h3>Relationship Trajectory:</h3>
     <ul>
       <li>Mood-based switch remains fluid → 📈 Steady growth</li>
       <li class="sub">Relationship remains emotionally co-created and vibrant.</li>
@@ -107,13 +130,13 @@
       <li class="sub">Mood Multiplier feels unseen or reduced. May exit emotionally or sexually.</li>
     </ul>
 
-    <p><strong>Ideal Dynamic:</strong><br>
-    A responsive co-creation. They thrive with partners who are emotionally intelligent, capable of reading their energy, and able to adjust in real time. Healthy polarity for them is less about fixed roles and more about intuitive reciprocity.</p>
+    <h3>Ideal Dynamic:</h3>
+    <p>A responsive co-creation. They thrive with partners who are emotionally intelligent, capable of reading their energy, and able to adjust in real time. Healthy polarity for them is less about fixed roles and more about intuitive reciprocity.</p>
 
         <h2>Origins of Desire</h2>
     <p>Mood Multipliers are turned on by energetic mirroring, emotional responsiveness, and mood-driven intensity. Their arousal heightens when their partner amplifies what they’re feeling, or when they’re invited to reflect that arousal back.</p>
 
-    <p><strong>Theoretical Explanations:</strong></p>
+    <h3>Theoretical Explanations:</h3>
     <ul>
       <li><strong>Mimetic Desire Theory:</strong> They crave experiences that allow them to reflect and intensify the desires of their partner. Desire is not about initiating, it’s about co-creating and building in sync.</li>
       <li><strong>Imprintation Theory:</strong> Early arousal may have occurred during moments of emotional bonding or shared intensity, reinforcing a lifelong pattern of arousal through mutual responsiveness.</li>
@@ -123,7 +146,6 @@
     </ul>
 
     <h2>Turn-On Vocabulary</h2>
-    <p>These phrases unlock their erotic responsiveness:</p>
     <ul>
       <li>“I love how you match my energy.”</li>
       <li>“You’re so in tune with me.”</li>
@@ -138,7 +160,7 @@
     </ul>
 
     <h2>Conflict Pattern</h2>
-    <p><strong>Tendencies During Conflict:</strong></p>
+    <h3>Tendencies During Conflict:</h3>
     <ul>
       <li>Becomes emotionally reactive or emotionally avoidant, depending on mood</li>
       <li>Mirrors partner’s tone, which can escalate or soothe the argument</li>
@@ -146,14 +168,14 @@
       <li>May temporarily shut down or over-perform to “fix” the mood</li>
     </ul>
 
-    <p><strong>Triggers:</strong></p>
+    <h3>Triggers:</h3>
     <ul>
       <li>Being mischaracterized as fake or manipulative</li>
       <li>Partner demanding a fixed erotic or emotional role</li>
       <li>Feeling unseen, invalidated, or emotionally out of sync</li>
     </ul>
 
-    <p><strong>Resolution Style:</strong></p>
+    <h3>Resolution Style:</h3>
     <ul>
       <li>Calms down with emotional acknowledgment, not logic</li>
       <li>Needs space to feel, then reflect</li>
@@ -161,34 +183,38 @@
       <li>Gains clarity when given emotional safety and flexibility</li>
     </ul>
 
-    <p><strong>Growth Edge:</strong><br>
-    Learning how to advocate for their needs when the mood shifts. Trusting that their changing desires are valid and worth communicating clearly.</p>
+    <h3>Growth Edge:</h3>
+    <ul>
+      <li>Learning how to advocate for their needs when the mood shifts</li>
+      <li>Trusting that their changing desires are valid and worth communicating clearly</li>
+    </ul>
 
-        <h2>Erotic Edge & Drop</h2>
-    <p><strong>Erotic Edge:</strong><br>
-    Mood Multipliers amplify the room. Their superpower is erotic resonance, they don’t lead or follow, they mirror and magnify. Their lovers feel seen, intensified, and emotionally attuned in their presence. Sex with them feels like riding a wave that keeps changing direction — and somehow, always peaks at the right time.</p>
-
-    <p><strong>Erotic Drop (Dealbreaker):</strong><br>
-    Being forced into a static role or labeled as indecisive. The mood switch isn’t a flake, they’re a finely-tuned emotional barometer. If their adaptability is taken for weakness or performative confusion, they shut down entirely.</p>
+    <h2>Erotic Edge & Drop</h2>
+    <p><strong>Erotic Edge:</strong> Mood Multipliers amplify the room. Their superpower is erotic resonance, they don’t lead or follow, they mirror and magnify. Their lovers feel seen, intensified, and emotionally attuned in their presence. Sex with them feels like riding a wave that keeps changing direction — and somehow, always peaks at the right time.</p>
+    <p><strong>Erotic Drop (Dealbreaker):</strong> Being forced into a static role or labeled as indecisive. The mood switch isn’t a flake, they’re a finely-tuned emotional barometer. If their adaptability is taken for weakness or performative confusion, they shut down entirely.</p>
 
     <h2>Erotic Short Story</h2>
     <p>The tension has been building for hours. Maybe longer. You’ve been orbiting each other all night, letting glances stretch, letting silence say what words would fumble. Now the room is quiet, and the distance between you has disappeared.</p>
 
     <p>You’re standing close. Too close for things to stay neutral. You feel it in the way your skin reacts before anything even touches you. Your breath has gone shallow. The muscles in your thighs are tight. This isn’t anticipation. It’s permission, waiting for a cue.</p>
 
-    <p>They tilt their head and look at you with the kind of focus that makes everything slow down. “You’re feeling it,” they say. Not a question. A fact. Their voice is steady, confident, and firm.</p>
+    <p>They tilt their head and look at you with the kind of focus that makes everything slow down.  
+    “You’re feeling it,” they say. Not a question. A fact. Their voice is steady, confident, and firm.</p>
 
     <p>You hold their gaze, even though it makes your chest flutter. There’s no performance here. No act. Just you, and the strange gravity they carry with them.</p>
 
     <p>They take a step forward, not rushing, just closing the gap. Your body reacts before your brain does. Shoulders back, spine straighter, like instinct wants to offer something forward. You’re not used to that. Not unless it’s earned.</p>
 
-    <p>They study your face for a moment, then speak again. “I know your secret. You have a little submissive side. You just need the right person to bring it out of you.”</p>
+    <p>They study your face for a moment, then speak again.  
+    “I know your secret. You have a little submissive side. You just need the right person to bring it out of you.”</p>
 
     <p>The words land like a key turning. You exhale, and something inside you unlocks.</p>
 
-    <p>Their hand rises, fingers brushing the line of your jaw. The touch is light, but it pins you in place better than force ever could. Your eyes flutter shut for a second, just long enough to let it happen.</p>
+        <p>Their hand rises, fingers brushing the line of your jaw. The touch is light, but it pins you in place better than force ever could. Your eyes flutter shut for a second, just long enough to let it happen.</p>
 
-    <p>You hear their breath shift. Feel their palm rest against your cheek. “You let people think you’re hard to move,” they murmur. “But all it takes is the right touch.”</p>
+    <p>You hear their breath shift. Feel their palm rest against your cheek.</p>
+
+    <p>“You let people think you’re hard to move,” they murmur. “But all it takes is the right touch.”</p>
 
     <p>It’s not cocky. It’s honest. And it makes your knees want to give just a little.</p>
 
@@ -234,15 +260,23 @@
 
     <p>You moan. Not because you’re trying to let them know that you’re feeling good but because you can’t help it. They press harder.</p>
 
-    <p>Your hips lift. Their hand steadies you. “You’re perfect when you feel everything,” they whisper.</p>
+    <p>Your hips lift.</p>
 
-    <p>You don’t say anything. You just give them more. Your back arches. You whisper their name. You grip the sheets. Your thighs shake. Your mouth parts in a silent plea.</p>
+    <p>Their hand steadies you. “You’re perfect when you feel everything,” they whisper.</p>
+
+    <p>You don’t say anything. You just give them more.</p>
+
+    <p>Your back arches. You whisper their name. You grip the sheets. Your thighs shake. Your mouth parts in a silent plea.</p>
 
     <p>They move with rhythm. Controlled. Responsive. They’re reading you. Matching your sounds, your tension, your pleasure.</p>
 
-    <p>The air is thick now. You’re almost there. You whisper, “Don’t stop.”</p>
+    <p>The air is thick now. You’re almost there.</p>
 
-    <p>They don’t. They keep their eyes on yours while they touch you, while your body tenses and your breath catches and the wave crests. You feel the fall coming.</p>
+    <p>You whisper, “Don’t stop.”</p>
+
+    <p>They don’t.</p>
+
+    <p>They keep their eyes on yours while they touch you, while your body tenses and your breath catches and the wave crests. You feel the fall coming.</p>
 
     <p>“Let go,” they say. “I’ve got you.”</p>
 
@@ -252,17 +286,20 @@
 
     <p>They don’t leave. They don’t disappear. They hold you through it.</p>
 
-    <p>You nuzzle against them, eyes closed, chest rising fast, then slower. They kiss your forehead. “That wasn’t you giving in,” they murmur. “That was us getting lost in each other.”</p>
+    <p>You nuzzle against them, eyes closed, chest rising fast, then slower. They kiss your forehead.</p>
 
-    <p>You nod. A hum vibrates in your throat. They stroke your spine.</p>
+    <p>“That wasn’t you giving in,” they murmur. “That was us getting lost in each other.”</p>
 
-    <p>“I know you’re not always submissive,” they say again, quieter now. “But when you’re with me, you just can’t help but want me to take you deeper.”</p>
+    <p>You nod. A hum vibrates in your throat.</p>
+
+    <p>They stroke your spine. “I know you’re not always submissive,” they say again, quieter now. “But when you’re with me, you just can’t help but want me to take you deeper.”</p>
 
     <p>You smile, lazy, content, already wanting more.</p>
 
     <p>You’re not always like this. You don’t always show this side of yourself. But something about them makes you want to.</p>
 
-    <p>Not because they took it from you. Because you wanted to give it.</p>
+    <p>Not because they took it from you.  
+    Because you wanted to give it.</p>
 
     <p>And you know they’ll make it worth giving again.</p>
 
